[gd_scene load_steps=17 format=3 uid="uid://cy84lyojn3iqq"]

[ext_resource type="Script" uid="uid://b1cvwcmmx72oi" path="res://src/world.gd" id="1_8e6n3"]
[ext_resource type="PackedScene" uid="uid://cb0bypkagv62b" path="res://src/characters/Avery_Character.tscn" id="1_dotkg"]
[ext_resource type="Texture2D" uid="uid://v41vddrb6dkw" path="res://assets/Background sketch.png" id="2_njovb"]
[ext_resource type="PackedScene" uid="uid://1mphq7fl1h1k" path="res://src/characters/Chip_Character.tscn" id="2_tnjnu"]
[ext_resource type="PackedScene" uid="uid://culjug2pb7oix" path="res://src/characters/Neve_Character.tscn" id="3_8e6n3"]
[ext_resource type="PackedScene" uid="uid://dl7xfwajbn007" path="res://src/characters/Tif_Character.tscn" id="4_eemcn"]
[ext_resource type="PackedScene" uid="uid://5njuie55msni" path="res://src/snapspots/Attic_snapspot.tscn" id="5_njovb"]
[ext_resource type="PackedScene" uid="uid://bh1n74ninsl4t" path="res://src/snapspots/Bathroom_snapspot.tscn" id="6_5xesp"]
[ext_resource type="PackedScene" uid="uid://bn14qdw4c41qn" path="res://src/snapspots/Bedroom_snapspot.tscn" id="7_a3wil"]
[ext_resource type="PackedScene" uid="uid://w34hhgs8otav" path="res://src/snapspots/Library_snapspot.tscn" id="8_8kjpi"]
[ext_resource type="PackedScene" uid="uid://cwm6fppf0op7j" path="res://src/snapspots/LivingRoom_snapspot.tscn" id="9_yyjdi"]
[ext_resource type="PackedScene" uid="uid://cwxnad5orbb2o" path="res://src/snapspots/DiningRoom_snapspot.tscn" id="10_tnjnu"]
[ext_resource type="PackedScene" uid="uid://dg62n753vls8w" path="res://src/snapspots/default_snapspot.tscn" id="12_eemcn"]
[ext_resource type="Script" uid="uid://b4nrjflekr4yb" path="res://src/puzzle_number.gd" id="14_5xesp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8e6n3"]
bg_color = Color(0.164706, 0.164706, 0.388235, 0.898039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eemcn"]
bg_color = Color(0.0866714, 0.0867138, 0.185587, 1)

[node name="world" type="Node2D"]
script = ExtResource("1_8e6n3")

[node name="HouseArt" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.317647)
offset_left = 305.0
offset_top = -51.0
offset_right = 4228.0
offset_bottom = 2645.0
scale = Vector2(0.23, 0.23)
texture = ExtResource("2_njovb")
stretch_mode = 5

[node name="Avery_Character" parent="." groups=["Characters"] instance=ExtResource("1_dotkg")]
position = Vector2(166, 413)

[node name="Chip_Character" parent="." groups=["Characters"] instance=ExtResource("2_tnjnu")]
position = Vector2(66, 413)

[node name="Neve_Character" parent="." groups=["Characters"] instance=ExtResource("3_8e6n3")]
position = Vector2(266, 413)

[node name="Tif_Character" parent="." groups=["Characters"] instance=ExtResource("4_eemcn")]
position = Vector2(366, 413)

[node name="Attic_snapspot" parent="." groups=["Snapspots"] instance=ExtResource("5_njovb")]
position = Vector2(740, 91)

[node name="Bathroom_snapspot" parent="." groups=["Snapspots"] instance=ExtResource("6_5xesp")]
position = Vector2(976, 266)

[node name="Bedroom_snapspot" parent="." groups=["Snapspots"] instance=ExtResource("7_a3wil")]
position = Vector2(876, 266)

[node name="Library_snapspot" parent="." groups=["Snapspots"] instance=ExtResource("8_8kjpi")]
position = Vector2(609, 270)

[node name="LivingRoom_snapspot" parent="." groups=["Snapspots"] instance=ExtResource("9_yyjdi")]
position = Vector2(626, 416)

[node name="Kitchen_snapspot" parent="." groups=["Snapspots"] instance=ExtResource("10_tnjnu")]
position = Vector2(843, 411)

[node name="DiningRoom_snapspot" parent="." groups=["Snapspots"] instance=ExtResource("10_tnjnu")]
position = Vector2(992, 414)

[node name="Panel" type="Panel" parent="."]
offset_top = 498.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 23.0
offset_right = -22.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Panel" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Check" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Check
"

[node name="Pause_Button" type="Button" parent="."]
offset_left = 15.0
offset_top = 15.0
offset_right = 75.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 30
text = "||"

[node name="Pause_Menu" type="Panel" parent="."]
visible = false
offset_left = 326.0
offset_top = 74.0
offset_right = 826.0
offset_bottom = 574.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8e6n3")

[node name="VBoxContainer" type="VBoxContainer" parent="Pause_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 24.0
offset_right = -27.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Panel" type="Panel" parent="Pause_Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_eemcn")

[node name="Label" type="Label" parent="Pause_Menu/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "(Paused)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Pause_Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="Quit to Menu" type="Button" parent="Pause_Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Quit to Menu"

[node name="A_Start" parent="." groups=["Snapspots"] instance=ExtResource("12_eemcn")]
position = Vector2(66, 413)

[node name="C_Start" parent="." groups=["Snapspots"] instance=ExtResource("12_eemcn")]
position = Vector2(366, 413)

[node name="N_Start" parent="." groups=["Snapspots"] instance=ExtResource("12_eemcn")]
position = Vector2(266, 413)

[node name="T_Start" parent="." groups=["Snapspots"] instance=ExtResource("12_eemcn")]
position = Vector2(166, 413)

[node name="PuzzleNumber" type="Panel" parent="."]
offset_left = 1082.0
offset_top = 21.0
offset_right = 1132.0
offset_bottom = 71.0
script = ExtResource("14_5xesp")

[node name="Label" type="Label" parent="PuzzleNumber"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/HBoxContainer/Check" to="." method="_on_check_pressed"]
[connection signal="pressed" from="Pause_Button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Pause_Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Pause_Menu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause_Menu/VBoxContainer/Quit to Menu" to="." method="_on_quit_to_menu_pressed"]
